RESOLVED FIXED194030
Regression(PSON) Load hang can occur on history navigation
https://bugs.webkit.org/show_bug.cgi?id=194030
Summary Regression(PSON) Load hang can occur on history navigation
Chris Dumez
Reported 2019-01-30 10:50:50 PST
Load hang can occur on history navigation when PSON is enabled.
Attachments
Patch (11.34 KB, patch)
2019-01-30 10:59 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-30 10:51:02 PST
Chris Dumez
Comment 2 2019-01-30 10:59:38 PST
Chris Dumez
Comment 3 2019-01-30 12:27:45 PST
Comment on attachment 360597 [details] Patch Clearing flags on attachment: 360597 Committed r240725: <https://trac.webkit.org/changeset/240725>
Chris Dumez
Comment 4 2019-01-30 12:27:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.