Source/WebKit/UIProcess/WebProcessPool.cpp
@@ -2190,8 +2190,14 @@ void WebProcessPool::processForNavigationInternal(WebPageProxy& page, const API:
             });
         }
 
-        if (auto* process = WebProcessProxy::processForIdentifier(targetItem->itemID().processIdentifier))
-            return completionHandler(*process, nullptr, "Using target back/forward item's process"_s);
+        if (RefPtr<WebProcessProxy> process = WebProcessProxy::processForIdentifier(targetItem->itemID().processIdentifier)) {
+            // FIXME: Architecturally we do not currently support multiple WebPage's with the same ID in a given WebProcess.
+            // In the case where this WebProcess has a SuspendedPageProxy for this WebPage, we can throw it away to support
+            // WebProcess re-use.
+            removeAllSuspendedPagesForPage(page, process.get());
+
+            return completionHandler(process.releaseNonNull(), nullptr, "Using target back/forward item's process"_s);
+        }
     }
 
     if (navigation.treatAsSameOriginNavigation())
@@ -2225,9 +2231,7 @@ void WebProcessPool::processForNavigationInternal(WebPageProxy& page, const API:
                 // In the case where this WebProcess has a SuspendedPageProxy for this WebPage, we can throw it away to support
                 // WebProcess re-use.
                 // In the future it would be great to refactor-out this limitation (https://bugs.webkit.org/show_bug.cgi?id=191166).
-                m_suspendedPages.removeAllMatching([&](auto& suspendedPage) {
-                    return &suspendedPage->page() == &page && &suspendedPage->process() == process;
-                });
+                removeAllSuspendedPagesForPage(page, process);
 
                 return completionHandler(makeRef(*process), nullptr, reason);
             }
@@ -2263,10 +2267,10 @@ void WebProcessPool::addSuspendedPage(std::unique_ptr<SuspendedPageProxy>&& susp
     m_suspendedPages.append(WTFMove(suspendedPage));
 }
 
-void WebProcessPool::removeAllSuspendedPagesForPage(WebPageProxy& page)
+void WebProcessPool::removeAllSuspendedPagesForPage(WebPageProxy& page, WebProcessProxy* process)
 {
-    m_suspendedPages.removeAllMatching([&page](auto& suspendedPage) {
-        return &suspendedPage->page() == &page;
+    m_suspendedPages.removeAllMatching([&page, process](auto& suspendedPage) {
+        return &suspendedPage->page() == &page && (!process || &suspendedPage->process() == process);
     });
 }
 
@@ -2294,10 +2298,10 @@ void WebProcessPool::removeSuspendedPage(SuspendedPageProxy& suspendedPage)
         m_suspendedPages.remove(it);
 }
 
-bool WebProcessPool::hasSuspendedPageFor(WebProcessProxy& process) const
+bool WebProcessPool::hasSuspendedPageFor(WebProcessProxy& process, WebPageProxy* page) const
 {
-    return m_suspendedPages.findIf([&process](auto& suspendedPage) {
-        return &suspendedPage->process() == &process;
+    return m_suspendedPages.findIf([&process, page](auto& suspendedPage) {
+        return &suspendedPage->process() == &process && (!page || &suspendedPage->page() == page);
     }) != m_suspendedPages.end();
 }
 
